Prevent "send mail" button from being too small

--- a/pages/contact-style.css
+++ b/pages/contact-style.css
@@ -155,6 +155,7 @@ input:focus, textarea:focus {
   transition: box-shadow .1s linear;
   position: relative;
   cursor: pointer;
+  min-width: 5rem;
 }
 
 #contact button>span {
